--- a/bouble sort/index.html
+++ b/bouble sort/index.html
@@ -15,7 +15,7 @@
 <br>
 <div id="showDraw"  style="display:inline-flex"   ></div>
 <br style="margin:50px"  >
-<span   >bubble:</span>  
+<span  id="bubble" >Bubble</span>  
 <div id="showSort"  ></div>
 
 
